--- a/styles/style.css
+++ b/styles/style.css
@@ -29,10 +29,31 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
     width: 100vw;
     height: 100vh;
     padding: 30px;
+    background-color: #dfffe5;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    padding-top: 30px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    top: 20vh;
+    left: 40vw;
+    width: 250px;
+    height: 250px;
+    overflow: auto;
+    border: 1px solid black;
+    background-color: white;
 }
 
 article {
@@ -41,6 +62,7 @@ article {
     border: 1px solid #777;
     border-radius: 5px;
     padding: 10px;
+    background-color: white;
 }
 
 article div {
@@ -50,4 +72,34 @@ article div {
 article > div {
     width: 70%;
     border-right: 1px solid #ccc;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    align-items: center;
+    gap: 30px;
+}
+
+fieldset {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding: 5px;
+}
+
+/* Elelements */
+
+button {
+    border-radius: 5px;
+    padding: 5px 20px;
+}
+
+/* Modifiers */
+
+.black-button {
+    border: 1px solid black;
+    color: white;
+    background-color: black;
 }
