--- a/styles/style.css
+++ b/styles/style.css
@@ -69,9 +69,16 @@ article div {
     padding: 0 5px;
 }
 
-article > div {
-    width: 70%;
+.book-data {
     border-right: 1px solid #ccc;
+    flex-grow: 4;
+}
+
+.card-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
 }
 
 form {
@@ -102,4 +109,10 @@ button {
     border: 1px solid black;
     color: white;
     background-color: black;
+}
+
+.remove-button {
+    border: 1px solid rgb(238, 74, 74);
+    color: black;
+    background-color: rgb(238, 74, 74);
 }
